# wii-otn

./: .gitignore  readme.md
.ccls-cache/@Users@kevinerdogan@software@wiiotn/: demos@virtual-controller@main.cpp.blob
.obsidian/: appearance.json  workspace.json
demos/hid-wii-socket/: CMakeLists.txt  Driver.cpp
demos/multiple-virtual-controllers/: CMakeLists.txt  compile_commands.json  main.cpp  virtualcontroller.cpp  virtualcontroller.h
demos/node-wiimote/: package-lock.json  package.json
demos/node-wiimote/src/: index.ts  wiimote.ts
demos/socket-server/: .clang-format  CMakeLists.txt  compile_commands.json  includes.h  main.cpp  socket.cpp  socket.h  virtualcontroller.cpp  virtualcontroller.h
demos/socket-server/client-demo/: CODE_OF_CONDUCT.md  index.ts  interface.ts  keyboard.ts  keypress.ts  main.ts  package-lock.json  package.json  socket.ts  tsconfig.json
demos/socket-server/client-demo/src/main/: main.ts  preload.ts
demos/socket-server/client-demo/src/renderer/: App.tsx  app.scss
demos/socket-server/client-demo/src/renderer/components/sidemenu/: sidemenu.tsx
demos/socket-server/client-demo/src/renderer/components/textinput/: TextInput.tsx
demos/socket-server/client-demo/src/renderer/pages/: connect.tsx  control.tsx
demos/socket-server/client-demo/src/renderer/styles/: button.scss  footer.scss  sidemenu.scss
demos/socket-server/client-demo/src/renderer/styles/pages/: connect.scss  control.scss
demos/virtual-controller/: .clang-format  CMakeLists.txt  VirtualController.h  build.bat  compile_commands.json  keyboardlistener.cpp  keyboardlistener.h  main.cpp  readme.md  run.bat  virtualcontroller.cpp
docs/: HID (Human Interface Devices).md  Packet Map from Client to Server.md  Simple Driver.md  ai_steps.md  docs.md  map.md  readme.md
docs/.obsidian/: workspace.json
docs/vigem/: Basic.md  Errors.md  Functions.md
docs/vjoy/: ai_readme.md
docs/winsock/: Basics.md
lib/ViGEmClient/: CMakeLists.txt  ViGEmClient.exp  ViGEmClient.lib
lib/ViGEmClient/ARM64/: ViGEmClient.lib
wiiotn-client/: :w  package-lock.json  package.json  tsconfig.json
wiiotn-client/release/app/: package.json
wiiotn-client/src/main/: main.ts  menu.ts  preload.ts
wiiotn-client/src/renderer/: App.tsx  IPC.e.ts  socket_functions.ts
wiiotn-client/src/renderer/components/: genericdom.d.ts
wiiotn-client/src/renderer/components/button/: Button.tsx
wiiotn-client/src/renderer/components/dropdown/: dropdown.tsx
wiiotn-client/src/renderer/components/footer/: footer.tsx
wiiotn-client/src/renderer/components/keyinput/: keyinput.tsx
wiiotn-client/src/renderer/components/page-container/: pagecontainer.tsx
wiiotn-client/src/renderer/components/sidemenu/: sidemenu.tsx
wiiotn-client/src/renderer/hooks/: useGamePad.ts  useGamepadListener.tsx  useSettings.ts
wiiotn-client/src/renderer/pages/: configure.tsx  connect.tsx  control.tsx
wiiotn-client/src/renderer/scss_lib/: breakpoint.scss
wiiotn-client/src/renderer/styles/: dropdown.scss  pagecontainer.scss  sidemenu.scss  textinput.scss
wiiotn-client/src/renderer/styles/pages/: configure.scss
wiiotn-client/src/storage/: exports.ts  index.ts
